--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@splinetool/react-spline": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.469.0",
     "mini-svg-data-uri": "^1.4.4",
-    "motion": "^11.15.0",
+    "motion": "^11.18.2",
     "next": "15.1.2",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
